--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -13,6 +14,9 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'false'
+        // TODO: Прописать адрес нашего сервера.
+        buildConfigField "String", "BACKEND_API_URL", '""'
     }
 
     buildTypes {
@@ -31,6 +35,51 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    flavorDimensions "deployment-environment"
+
+    productFlavors {
+        mock {
+            dimension "deployment-environment"
+            applicationIdSuffix ".mock"
+            versionNameSuffix ".mock"
+            buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'true'
+        }
+        dev {
+            dimension "deployment-environment"
+            applicationIdSuffix ".dev"
+            versionNameSuffix ".dev"
+            buildConfigField "String", "BACKEND_API_URL", '""'
+        }
+        stage {
+            dimension "deployment-environment"
+            applicationIdSuffix ".stage"
+            versionNameSuffix ".stage"
+            buildConfigField "String", "BACKEND_API_URL", '""'
+        }
+        prod {
+            dimension "deployment-environment"
+            versionNameSuffix ".prod"
+            // Despite the default config, all the variables are specified explicitly here,
+            // because this product flavor is the most sensitive to errors.
+            buildConfigField "Boolean", "USE_MOCK_BACKEND_API", 'false'
+            buildConfigField "String", "BACKEND_API_URL", '""'
+        }
+    }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            outputFileName = "salavatov-${variant.versionName}-${variant.buildType.name}.apk"
+        }
+    }
+}
+
+kapt {
+    correctErrorTypes true
+}
+
+hilt {
+    enableAggregatingTask true
 }
 
 dependencies {
@@ -94,4 +143,13 @@ dependencies {
     // https://chrisbanes.github.io/insetter
     // https://github.com/chrisbanes/insetter
     implementation "dev.chrisbanes.insetter:insetter:0.6.0"
+
+    // https://github.com/haroldadmin/NetworkResponseAdapter.
+    implementation "com.github.haroldadmin:NetworkResponseAdapter:4.2.2"
+
+    // Dependency injection.
+    def hiltVersion = "2.38.1"
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
 }
